[package]
name = "obj_web"
version = "0.1.0"
authors = ["anohterhollow1125 <anotherhollow1125@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.11"
winit = { version = "0.23.0", features = ["web-sys"] }
cgmath = "0.17.0"
env_logger = "0.8.2"
# wgpu = "=0.6.2"
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs", rev = "ee0b96cc2e4626f6bd1f3075e8429f411b18c91b"}
futures = "0.3.8"
bytemuck = "1.4.1"
anyhow = "1.0"
tobj = "2.0.2"
once_cell = "1.5.2"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2.0"
glob = "0.3.0"
shaderc = "0.7.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"] }
web-sys = { version = "0.3.46", features = [
    "Document",
    "Navigator",
    "Node",
    "NodeList",
    "Gpu",
    "GpuAdapter",
    "GpuAddressMode",
    "GpuBindGroup",
    "GpuBindGroupEntry",
    "GpuBindGroupDescriptor",
    "GpuBindGroupLayout",
    "GpuBindGroupLayoutEntry",
    "GpuBindGroupLayoutDescriptor",
    "GpuBlendDescriptor",
    "GpuBlendFactor",
    "GpuBlendOperation",
    "GpuBindingType",
    "GpuBuffer",
    "GpuBufferBinding",
    "GpuBufferCopyView",
    "GpuBufferDescriptor",
    "GpuCanvasContext",
    "GpuColorDict",
    "GpuColorStateDescriptor",
    "GpuCommandBuffer",
    "GpuCommandBufferDescriptor",
    "GpuCommandEncoder",
    "GpuCommandEncoderDescriptor",
    "GpuCompareFunction",
    "GpuComputePassDescriptor",
    "GpuComputePassEncoder",
    "GpuComputePipeline",
    "GpuComputePipelineDescriptor",
    "GpuCullMode",
    "GpuDepthStencilStateDescriptor",
    "GpuDevice",
    "GpuDeviceDescriptor",
    "GpuExtent3dDict",
    "GpuFilterMode",
    "GpuFrontFace",
    "GpuIndexFormat",
    "GpuInputStepMode",
    "GpuLimits",
    "GpuLoadOp",
    "GpuMapMode",
    "GpuOrigin3dDict",
    "GpuPipelineLayout",
    "GpuPipelineLayoutDescriptor",
    "GpuPowerPreference",
    "GpuPrimitiveTopology",
    "GpuProgrammableStageDescriptor",
    "GpuQueue",
    "GpuRasterizationStateDescriptor",
    "GpuRenderBundle",
    "GpuRenderBundleDescriptor",
    "GpuRenderBundleEncoder",
    "GpuRenderBundleEncoderDescriptor",
    "GpuRenderPassColorAttachmentDescriptor",
    "GpuRenderPassDepthStencilAttachmentDescriptor",
    "GpuRenderPassDescriptor",
    "GpuRenderPassEncoder",
    "GpuRenderPipeline",
    "GpuRenderPipelineDescriptor",
    "GpuRequestAdapterOptions",
    "GpuSampler",
    "GpuSamplerDescriptor",
    "GpuShaderModule",
    "GpuShaderModuleDescriptor",
    "GpuStencilOperation",
    "GpuStencilStateFaceDescriptor",
    "GpuStoreOp",
    "GpuSwapChain",
    "GpuSwapChainDescriptor",
    "GpuTexture",
    "GpuTextureAspect",
    "GpuTextureComponentType",
    "GpuTextureCopyView",
    "GpuTextureDataLayout",
    "GpuTextureDescriptor",
    "GpuTextureDimension",
    "GpuTextureFormat",
    "GpuTextureViewDescriptor",
    "GpuTextureViewDimension",
    "GpuTextureView",
    "GpuVertexAttributeDescriptor",
    "GpuVertexBufferLayoutDescriptor",
    "GpuVertexFormat",
    "GpuVertexStateDescriptor",
    "GpuVertexAttributeDescriptor",
    "HtmlCanvasElement",
    "Window",
]}
js-sys = "0.3.46"
wasm-bindgen-futures = "0.4.19"
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"